<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_utils_msgs</name>
  <version>1.0.0</version>
  <description>This package contains the msgs and srvs for camera_utils_ros </description>

  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>
  <author>Federico Rollo</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>