<?xml version="1.0"?>
<package format="2">
  <name>camera_utils_ros</name>
  <version>0.0.0</version>
  <description>The camera_utils_ros package</description>


  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>

  <license>GPLv3</license>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


</package>
